package sase.evaluation.tree;

public enum TopologyCreatorTypes {
	NONE,
	TRIVIAL,
	SELINGER,
	ZSTREAM,
	ORDERED_ZSTREAM,
	ADAPTIVE_ZSTREAM,
}
