package sase.evaluation.tree;

public enum TreeCostModelTypes {
	NONE,
	THROUGHPUT,
	THROUGHPUT_LATENCY,
	SHARING_DEGREE,
}
